Completed with tests
Signed-off-by: Alessio <slux83@gmail.com>